--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@babylonjs/core": "^4.2.1",
     "@babylonjs/inspector": "^4.2.1",
+    "@types/node": "^17.0.12",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.4",
     "webpack": "^5.66.0",
@@ -21,6 +22,8 @@
     "babylonjs": "^5.0.0-beta.4",
     "babylonjs-gui": "^5.0.0-beta.4",
     "babylonjs-loaders": "^5.0.0-beta.4",
-    "babylonjs-materials": "^4.2.1"
+    "babylonjs-materials": "^4.2.1",
+    "colyseus.js": "^0.15.0-preview.2",
+    "dotenv-webpack": "^7.0.3"
   }
 }
