--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babylonjs/core": "^4.2.1",
-    "@babylonjs/inspector": "^4.2.1",
+    "@babylonjs/core": "^5.0.0-beta.5",
+    "@babylonjs/inspector": "^5.0.0-beta.5",
     "@types/node": "^17.0.12",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.4",
@@ -22,7 +22,8 @@
     "babylonjs": "^5.0.0-beta.4",
     "babylonjs-gui": "^5.0.0-beta.4",
     "babylonjs-loaders": "^5.0.0-beta.4",
-    "babylonjs-materials": "^4.2.1",
+    "babylonjs-materials": "^5.0.0-beta.5",
+    "babylonjs-procedural-textures": "^5.0.0-beta.5",
     "colyseus.js": "^0.15.0-preview.2",
     "dotenv-webpack": "^7.0.3"
   }
