--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Babylon.js Colyseus demo",
   "scripts": {
     "build": "webpack",
-    "watch": "webpack -w",
+    "watch": "webpack serve",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -16,7 +16,8 @@
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.4",
     "webpack": "^5.66.0",
-    "webpack-cli": "^4.9.1"
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.7.4"
   },
   "dependencies": {
     "babylonjs": "preview",
