--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "description": "Babylon.js Colyseus demo",
   "scripts": {
+    "start": "webpack serve",
     "build": "webpack",
-    "watch": "webpack serve",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
